# PushPOP3

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.c  server.c
client/: push.c  pushCommands.c
include/: Makefile.inc  args.h  authenticator.h  buffer.h  commands.h  maildir.h  netutils.h  parser.h  parser_utils.h  pop3.h  push3.h  pushCommands.h  selector.h  serverMetrics.h  stm.h  tests.h
server/: authenticator.c  commands.c  maildir.c  maildir.c.old  pop3.c  selector.c  stm.c
utils/: args.c  authenticator.c  buffer.c  netutils.c  selector.c  serverMetrics.c  stm.c
